--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
-/tests              export-ignore
-/.gitattributes     export-ignore
-/.gitignore         export-ignore
-/.travis.yml        export-ignore
-/CHANGELOG.md       export-ignore
-/phpunit.xml.dist   export-ignore
+/tests export-ignore
+/.gitattributes export-ignore
+/.gitignore export-ignore
+/.scrutinizer.yml export-ignore
+/.travis.yml export-ignore
+/CHANGELOG.md export-ignore
+/php-semver-checker-git.xml.dist export-ignore
+/phpunit.xml.dist export-ignore
