--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,22 @@
 language: php
 
 php:
-    - 5.3
-    - 5.4
     - 5.5
     - 5.6
     - 7.0
     - hhvm
 
-matrix:
-    allow_failures:
-        - php: 7.0
-
 sudo: false
 
-before_script:
+install:
     - composer self-update
-    - composer update
+    - composer install --no-interaction --prefer-source
 
 script:
-    - php vendor/bin/phpunit -c tests/phpunit.xml
+    - php vendor/bin/phpunit
 
 after_script:
-    - wget https://tomzx.github.io/php-semver-checker-git/php-semver-checker-git.phar
-    - php php-semver-checker-git.phar suggest src src --allow-detached -vvv
+    - wget https://scrutinizer-ci.com/ocular.phar
+    - php ocular.phar code-coverage:upload --format=php-clover log/coverage.xml
+    - wget http://psvcg.coreteks.org/php-semver-checker-git.phar
+    - php php-semver-checker-git.phar suggest -vvv
